# team-claude-analytics

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
collector/: Dockerfile  install.sh  pyproject.toml  uninstall.sh
collector/collector/: __init__.py  config.py  db.py  main.py  parser.py  watcher.py
dashboard/: .env.example  .gitignore  Dockerfile  pyproject.toml
dashboard/dashboard/: __init__.py  config.py  db.py  main.py
dashboard/dashboard/github/: __init__.py  client.py  sync.py
dashboard/dashboard/routers/: __init__.py  api.py  dashboard.py
dashboard/dashboard/services/: __init__.py  metrics.py
dashboard/dashboard/templates/: base.html  cycle_time.html  dashboard.html  interventions.html  interventions_by_pr.html  pr_timeline.html  velocity.html
dashboard/dashboard/templates/partials/: intervention_context.html  pr_interventions.html  summary_cards.html
dashboard/tests/: __init__.py  test_metrics.py
terraform/: ecr.tf  ecs.tf  github_actions.tf  main.tf  outputs.tf  rds.tf  schema.sql  security_groups.tf  terraform.tfvars.example  variables.tf  vpc.tf
